--- a/index.html
+++ b/index.html
@@ -4,6 +4,36 @@
     <title>KESTCLW(dot)COM</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
+<!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0DL9M7H1SX"></script>
+    <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0DL9M7H1SX');
+    </script>
+<!-- Click to copy -->
+    <script>
+    function copyToClipboard(element) {
+      var $temp = $("<input>");
+      $("body").append($temp);
+      $temp.val($(element).text()).select();
+      document.execCommand("copy");
+      $temp.remove();
+    }
+    </script>
+    <script>
+    $(function(){
+      new Clipboard('.copy-text');
+    });
+    </script>
+<!-- Click to go back previous page -->
+    <script>
+    function goBack() {
+      window.history.back();
+    }
+    </script>
 </head>
 <body>
     <!-- 網頁內容 -->
