--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>KESTCLW(dot)COM</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="javascript/script.js"></script>
 <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-0DL9M7H1SX"></script>
     <script>
@@ -37,14 +37,10 @@
 </head>
 <body>
     <header>
-        (the website will be back soon)
+        <div class="center">
+            (the website will be back soon)
+        </div>
     </header>
-    
-    <nav>
-        <ul>
-            <li>/li>
-        </ul>
-    </nav>
     
     <main>
         <section>
